--- a/vdiconverter/languages/vdiconverter.pot
+++ b/vdiconverter/languages/vdiconverter.pot
@@ -5,7 +5,8 @@ msgstr "Content-Type: text/plain; charset=UTF-8"
 msgid "VDI"
 msgstr ""
 
-#: tmainform.addbtn1.caption
+#: tmainform.cancelbtn.caption
+msgctxt "tmainform.cancelbtn.caption"
 msgid "Cancel"
 msgstr ""
 
