--- a/vdiconverter/languages/vdiconverter.ru.po
+++ b/vdiconverter/languages/vdiconverter.ru.po
@@ -17,7 +17,6 @@ msgid "VDI"
 msgstr ""
 
 #: tmainform.cancelbtn.caption
-#, fuzzy
 msgctxt "tmainform.cancelbtn.caption"
 msgid "Cancel"
 msgstr "Отмена"
@@ -52,19 +51,6 @@ msgctxt "tmainform.tarbtn.caption"
 msgid "TAR"
 msgstr ""
 
-#: unit1.sdeleteitems
-msgid "Delete the selected entries?"
-msgstr ""
-
-#: unit1.slistfileempty
-msgid "The list of files is empty!"
-msgstr ""
-
-#: unit1.snodestfolder
-msgid "Destination folder not found!"
-msgstr ""
-
-#: unit1.snosfxname
-msgid "The name of the archive is not listed!"
-msgstr ""
-
+#: unit1.sclosewarning
+msgid "Closing will cancel the operation. Continue?"
+msgstr "Закрытие приведёт к отмене операции. Продолжить?"
